Fixed form group not showing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,8 @@ table {
 
 .content {
     width: calc(100% - 100px);
-    margin: 0 auto 64px;
+    margin: 0 auto;
+    padding-bottom: 64px;
 }
 
 .hidden {
